<resources>
    <string name="app_name">TallyBook</string>
    <string name="begin_test">开始体验</string>
    <string name="login_time_out">登录状态已过期，请重新登录</string>
    <!--bottom title-->
    <string name="title_main">首页</string>
    <string name="statistical">统计</string>
    <string name="title_my">我的</string>

    <string name="daily">日常</string>
    <string name="total_balance">总计结余</string>
    <string name="zero">0</string>
    <string name="other">其他</string>
    <string name="remarks">备注说明</string>
    <!--page my-->
    <string name="username">这么弱的语气</string>
    <string name="openvip">开通会员</string>
    <string name="out_data">导出数据</string>
    <string name="in_data">导入数据</string>
    <string name="own_pwd">隐私密码</string>
    <string name="help">帮助手册</string>
    <string name="parts">小小部件</string>
    <string name="invite">邀请好友</string>
    <string name="assets">净资产</string>
    <string name="totalassets">资产总额</string>
    <string name="totalliabkikties">负债总额</string>
    <string name="function">功能管理</string>
    <string name="account">资产账户</string>
    <string name="see_account">开启后，可以管理查看资产账户</string>
    <string name="accountbook">账本预算</string>
    <string name="set_budget">开启后，可以在首页设置预算控制开销</string>
    <string name="individualization">个性化</string>
    <string name="preference">偏好设置</string>

    <string name="no_data_str">点击+记下第一笔账吧~</string>
    <string name="loading">加载中…</string>
    <string name="seach_cue">输入分类/备注/金额关键词试试~</string>
    <string name="cancel">取消</string>
    <string name="count_bill">共x笔</string>
    <string name="date">2020年03月</string>
    <string name="expenses">支出</string>
    <string name="incone">/ 收入</string>
    <string name="remain">/ 结余</string>
    <string name="total_exp">总支出</string>
    <string name="total_income">总收入</string>
    <string name="nodata">暂无数据</string>
    <string name="exit_login">退出登录</string>
    <string name="setting">设置</string>
    <string name="clear_data">清除数据</string>
    <string name="prefence_setting">偏好设置</string>
    <string name="day">天</string>
    <string name="mouth">月</string>
    <string name="date_change">修改日期</string>
    <string name="commit">确定</string>

</resources>