<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="@dimen/dp70"
     android:layout_width="match_parent"
    android:id="@+id/list_view_bills_layout"
    android:background="@drawable/layout_round_no">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/dp17"
        android:layout_marginRight="@dimen/dp17"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp10"


        >
        <RelativeLayout
            android:layout_width="@dimen/dp45"
            android:layout_height="@dimen/dp45"
            android:id="@+id/bills_r2"
            android:layout_centerVertical="true">
            <com.android.tallybook.customView.RoundView
                android:id="@+id/list_bills_layout_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/list_bills_tv_id"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/list_bills_iv_infor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/bills_r2"
            android:layout_marginLeft="@dimen/dp15"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/other"
                android:layout_marginBottom="@dimen/dp3"
                android:id="@+id/list_bills_tv_class"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/dp3"
                android:text="@string/remarks"
                android:id="@+id/list_bills_tv_explantion"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="#666"
            android:textSize="@dimen/dp16"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:id="@+id/list_bills_tv_money"/>

    </RelativeLayout>

</LinearLayout>