<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.android.tallybook.customView.StatusBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fsta_sbar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dp17"
        android:layout_marginRight="@dimen/dp17">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fsta_tv_date"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="@dimen/dp17"
            android:textStyle="bold"
            app:drawableRightCompat="@drawable/ic_pulldown_mini"
            android:drawablePadding="@dimen/dp10"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fsta_iv_filter"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_filter"
            />
    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dp17"
            android:layout_marginRight="@dimen/dp17">
            <com.android.tallybook.customView.discView.DiscView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fsta_dv"
                android:visibility="gone"
               />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp16">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_in"
                    android:textSize="@dimen/dp13"
                    android:text="@string/expenses"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_in"
                    android:textSize="@dimen/dp13"
                    android:layout_marginStart="@dimen/dp2"
                    android:text="@string/zero"
                    android:id="@+id/fsta_exp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_in"
                    android:textSize="@dimen/dp13"
                    android:layout_marginStart="@dimen/dp2"
                    android:text="@string/incone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_in"
                    android:textSize="@dimen/dp13"
                    android:layout_marginStart="@dimen/dp2"
                    android:text="@string/zero"
                    android:id="@+id/fsta_income"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_in"
                    android:textSize="@dimen/dp13"
                    android:layout_marginStart="@dimen/dp2"
                    android:text="@string/remain"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_in"
                    android:textSize="@dimen/dp13"
                    android:layout_marginStart="@dimen/dp2"
                    android:text="@string/zero"
                    android:id="@+id/fsta_remain"/>
            </LinearLayout>
            <com.google.android.material.tabs.TabLayout
                android:layout_marginTop="@dimen/dp15"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/fsta_tl"
                app:tabIndicatorFullWidth="false"
                app:tabIndicatorColor="@color/green"
                app:tabIndicatorHeight="@dimen/dp2"
                app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
                app:tabTextColor="#555"
                app:tabBackground="@null"
                app:tabRippleColor="@null"
                >

            </com.google.android.material.tabs.TabLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp4"
                    android:background="#20CCCCCC"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp4"
                    android:background="#25CCCCCC"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp4"
                    android:background="#30CCCCCC"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_round_no"
                android:layout_marginLeft="@dimen/dp2"
                android:layout_marginRight="@dimen/dp2"
                android:orientation="vertical"
                 >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp4"
                    android:background="#ccc"
                    />
                <com.android.tallybook.customView.ViewPageForScrollView
                    android:id="@+id/fsta_vp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                   />
            </LinearLayout>



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>