<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray_shallow">
    <com.android.tallybook.customView.StatusBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_bar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        >
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp35"
            android:layout_weight="4"
            android:hint="@string/seach_cue"
            android:drawableStart="@drawable/ic_search"
            android:gravity="center_vertical"
            android:textSize="@dimen/dp15"
            android:drawablePadding="@dimen/dp15"
            android:paddingLeft="@dimen/dp15"
            android:background="@drawable/btn_round_gary"
            android:drawableLeft="@drawable/ic_search"
            android:id="@+id/search_et_key"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="right"
            android:id="@+id/search_tv_cancel"
            android:textColor="@color/green"
            android:text="@string/cancel"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
       >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15">
            <View
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dp5"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_marginTop="@dimen/dp2"
                android:layout_marginBottom="@dimen/dp2"
                android:background="@drawable/view_green_roun" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp15"
                android:text="@string/count_bill"
                android:textColor="#555"
                android:id="@+id/search_tv_datacount"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_marginStart="@dimen/dp5" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_ll_nodata"
        android:layout_marginTop="@dimen/dp100"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_nodata"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"

            android:textSize="@dimen/dp16"
            android:textColor="#555"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        android:layout_marginTop="@dimen/dp20"
        >
        <com.android.tallybook.customView.ListViewForScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:dividerHeight="@dimen/dp10"
            android:id="@+id/search_lvfsv_searchdata"/>
    </ScrollView>
</LinearLayout>